--- a/Andorid/CommonModule/src/main/res/values/strings.xml
+++ b/Andorid/CommonModule/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="kakaoLinkApi"></string>
     <string name="kakaoShareText"></string>
 
-    <string name="FacebookApiKey"></string>
+    <string name="FacebookApiKey">2242142929363530</string>
+
     <string name="NaverClientKey"></string>
     <string name="NaverSecretKey"></string>
 
